<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017-2018 HERE Europe B.V.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
  <string name="msdkui_app_about">About</string>
  <string name="msdkui_app_about_info_part_four">Currently, the HERE SDK UI Kit provides you components to build a route planner and a guidance experience. Check out our user guide for more information.</string>
  <string name="msdkui_app_about_info_part_one">The HERE Mobile SDK UI Kit enables you to build beautiful interfaces for Android and iOS.</string>
  <string name="msdkui_app_about_info_part_three">The HERE Mobile SDK UI Kit gives access to modular and highly customizable UI components and controls that allow you to provide an interactive user interface for your app. With just a few lines of code you can now build a full UI when developing with the Premium edition of the HERE Mobile SDK. This means reduced development time and a faster time to market. So, for example, where you would normally need several days to build a maneuver list using our native APIs, with the new UI kit, you\'ll only a few hours. However, if needed, the UI Kit still allows you to modify the appearance (e.g. colors, dimensions) and behavior (e.g. data presentation, logic, flow, subcomponents) of some UI controls.</string>
  <string name="msdkui_app_about_info_part_two">When it comes to any application, the user interface defines the experience you provide when someone interacts with your software. It can mean the difference between acquiring and retaining users or deterring them from returning to your app. We understand how critical this is to your success, so we pre-built a variety of screens with full functionality that can be used directly in your application. They are available today through the HERE Mobile SDK UI Kit for Android and iOS.</string>
  <string name="msdkui_app_add">Add</string>
  <string name="msdkui_app_add_waypoint">Add waypoint</string>
  <string name="msdkui_app_app_version">App version</string>
  <string name="msdkui_app_back">Go back one step</string>
  <string name="msdkui_app_cancel">Cancel</string>
  <string name="msdkui_app_collapse">Show less</string>
  <string name="msdkui_app_done">Done</string>
  <string name="msdkui_app_drag">Drag</string>
  <string name="msdkui_app_expand">Show more</string>
  <string name="msdkui_app_guidance_button_end">End</string>
  <string name="msdkui_app_guidance_button_showmaneuvers">See manoeuvres</string>
  <string name="msdkui_app_guidance_button_showmap">Show map</string>
  <string name="msdkui_app_guidance_button_start">Start navigation</string>
  <string name="msdkui_app_guidance_start_simulation">A guidance simulation will start</string>
  <string name="msdkui_app_guidance_teaser_description">Help your users get to their destination with turn-by-turn guidance.</string>
  <string name="msdkui_app_guidance_teaser_title">Drive navigation</string>
  <string name="msdkui_app_guidance_waypoint_subtitle">Tap the map to set your destination</string>
  <string name="msdkui_app_guidance_waypoint_title">Drive navigation</string>
  <string name="msdkui_app_here_sdk_version">HERE SDK version</string>
  <string name="msdkui_app_hint_collapse">Shows fewer waypoints.</string>
  <string name="msdkui_app_hint_expand">Shows more waypoints.</string>
  <string name="msdkui_app_info">App info</string>
  <string name="msdkui_app_map_view">Map view</string>
  <string name="msdkui_app_name_title">MSDK UI Demo</string>
  <string name="msdkui_app_ok">OK</string>
  <string name="msdkui_app_options">Options</string>
  <string name="msdkui_app_remove">Remove</string>
  <string name="msdkui_app_route_options">Route options</string>
  <string name="msdkui_app_route_preview_title">Route overview</string>
  <string name="msdkui_app_route_results_title">Routes</string>
  <string name="msdkui_app_routeoverview_to">To:</string>
  <string name="msdkui_app_routeresults_error">Didn\'t find any routes</string>
  <string name="msdkui_app_rp_teaser_description">Get directions for cars, lorries, bicycles and walking.</string>
  <string name="msdkui_app_rp_teaser_title">Route planner</string>
  <string name="msdkui_app_rp_waypoint_subtitle">Tap or long press on the map</string>
  <string name="msdkui_app_settings">Settings</string>
  <string name="msdkui_app_stop_navigation">Stop navigation</string>
  <string name="msdkui_app_storage_permission_not_granted">Required permission for storage not granted</string>
  <string name="msdkui_app_swap">Swap</string>
  <string name="msdkui_app_swap_waypoints">Swap waypoints</string>
  <string name="msdkui_app_teaser_link">Have a look</string>
  <string name="msdkui_app_ui_kit_version">MSDKUI version</string>
  <string name="msdkui_app_userposition_search">Getting your location</string>
  <string name="msdkui_app_versions">App version: %1$s\nApp build: %2$s\nLibrary version: %3$s</string>
  <string name="msdkui_app_waypoint_not_valid">Not a proper waypoint</string>
  <string name="msdkui_app_cord" translatable="false">%s, %s</string>
</resources>
