<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017-2019 HERE Europe B.V.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackgroundLight"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/app_version_container"
            style="@style/AboutVersionInfoContainer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ui_kit_version_container" >
            <TextView
                style="@style/AboutVersionTextTitle"
                android:text="@string/msdkui_app_app_version" />
            <TextView
                android:id="@+id/app_version"
                style="@style/AboutVersionTextSecondary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ui_kit_version_container"
            style="@style/AboutVersionInfoContainer"
            app:layout_constraintTop_toBottomOf="@id/app_version_container"
            app:layout_constraintBottom_toTopOf="@id/here_sdk_version_container" >
            <TextView
                style="@style/AboutVersionTextTitle"
                android:text="@string/msdkui_app_ui_kit_version" />
            <TextView
                android:id="@+id/ui_kit_version"
                style="@style/AboutVersionTextSecondary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/here_sdk_version_container"
            style="@style/AboutVersionInfoContainer"
            app:layout_constraintTop_toBottomOf="@id/ui_kit_version_container"
            app:layout_constraintBottom_toTopOf="@id/divider_and_text_info_container" >
            <TextView
                style="@style/AboutVersionTextTitle"
                android:text="@string/msdkui_app_here_sdk_version" />
            <TextView
                android:id="@+id/here_sdk_version"
                style="@style/AboutVersionTextSecondary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/divider_and_text_info_container"
            style="@style/AboutDividerAndTextInfoContainer"
            app:layout_constraintTop_toBottomOf="@id/here_sdk_version_container"
            app:layout_constraintBottom_toBottomOf="parent" >

            <View
                style="@style/BaseDivider" />

            <TextView
                style="@style/AboutInfoTextTitle"
                android:text="@string/msdkui_app_about_info_part_one" />

            <TextView
                style="@style/AboutInfoText"
                android:text="@string/msdkui_app_about_info_part_two" />

            <TextView
                style="@style/AboutInfoText"
                android:text="@string/msdkui_app_about_info_part_three" />

            <TextView
                style="@style/AboutInfoText"
                android:text="@string/msdkui_app_about_info_part_four" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
